--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,5 @@
 PORT = 4000
 NODE_ENV = DEVELOPMENT  
+
+
+DB_URI = mongodb+srv://Admin:Julesjules@database.5me6q.mongodb.net/Hulyas?retryWrites=true&w=majority
